$Id: History,v 1.17 2001-02-08 07:48:39 tsasaki Exp $
-------------------------------------------------------------------

     =========================================================
     Geant4 - an Object-Oriented Toolkit for Simulation in HEP
     =========================================================

                      Category History file
                      ---------------------
This file should be used by G4 developers and category coordinators
to briefly summarize all major modifications introduced in the code
and keep track of all category-tags.
It DOES NOT substitute the  CVS log-message one should put at every
committal in the CVS repository !

     ----------------------------------------------------------
     * Reverse chronological order (last date on top), please *
     ----------------------------------------------------------
Feb 08, 01 T.Sasaki (tracking-V03-00-03)
- STL migration: get rid of most of RW vectors
Feb 05, 01 G.Cosmo (tracking-V03-00-02)
- STL migration for G4OrderedTable and G4DataVector.
  Modified files: G4VSteppingVerbose.hh.

Jan 12, 01 T.Sasaki (tracking-V03-00-01)
- correction of class description 

Nov 04, 00 T.Sasaki (tracking-V02-00-02)
- G4TrackingManager.icc has been modified for new biasing schme
- Descriptions are added too header files

Aug 30, 00 T.Sasaki (tracking-V02-00-01)
- Protection for no AtRestDoIt procs. 

June 2, 00 M.Asai (tracking-01-01-01)
- Add SetUserTrackInformation(G4VUserTrackInformation*) to
  G4TrackingManager
- Fix problems in deleteing Touchable in G4SteppingManager (Hisaya) 

Hune 1, 00 H.Kurashige
- Add "const" to all G4VTouchable pointer

Jan 23, 00 T.Sasaki 
- GetCurrentValue() in G4TrackingMessenger.cc have a return value
- SetUserAction in G4SteppingManager.hh protected null pointers

Oct 22, 99 T.Sasaki G4SteppingMangaer.cc fixed the UserLmit problem     

Oct 13, 99 T.Sasaki updated G4SteppingVerbose and G4VSteppingVerbose 
