@@ -1,4 +1,4 @@
-$Id: History,v 1.17 2001-02-08 07:48:39 tsasaki Exp $
+$Id: History,v 1.18 2001-02-09 01:35:04 tsasaki Exp $
 -------------------------------------------------------------------
 
      =========================================================
@@ -16,6 +16,8 @@ committal in the CVS repository !
      ----------------------------------------------------------
      * Reverse chronological order (last date on top), please *
      ----------------------------------------------------------
+Feb 09, 01 T.Sasaki (tracking-V03-00-05)
+- Fix for linux etc.
 Feb 08, 01 T.Sasaki (tracking-V03-00-03)
 - STL migration: get rid of most of RW vectors
 Feb 05, 01 G.Cosmo (tracking-V03-00-02)
